data/derived/comb/progs/unify/prog1287.ml.out
Characters 50-66:
  then depth = depth -1 in
       ^^^^^^^^^^^^^^^^
Error: This expression has type bool but an expression was expected of type
         unit
